test/valid/builtins/or.js
var x = '' || 'bla';
var y = 0 || 2;
